--- a/6_more_info.Rmd
+++ b/6_more_info.Rmd
@@ -19,24 +19,24 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r root_dir_url, echo=FALSE}
-root <- 'https://raw.githubusercontent.com/michabohealthscience/training-fsa/main'
+root <- 'https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main'
 ```
 
 # Data file summary
 
-* **[data/HILIC_POS_male/0_sample_metadata.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/0_sample_metadata.csv)** - sample metadata
-* **[data/HILIC_POS_male/0_feature_metadata.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/0_feature_metadata.csv)** - feature metadata
-* **[data/HILIC_POS_male/0_sample_metadata_filtered.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/0_sample_metadata_filtered.csv)** - sample metadata (with blank removed)
-* **[data/HILIC_POS_male/1_unfiltered.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/1_unfiltered.csv)** - unfiltered intensity matrix following step 1
-* **[data/HILIC_POS_male/2_filtered.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/2_filtered.csv)** - filtered (both samples and features) intensity matrix following steps 1-6
-* **[data/HILIC_POS_male/3_pqn.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/3_pqn.csv)** - PQN normalised intensity matrix following steps 1-7
-* **[data/HILIC_POS_male/4_mv_imputed.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/4_mv_imputed.csv)** - missing value imputed intensity matrix following steps 1-8
-* **[data/HILIC_POS_male/5_glog.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/HILIC_POS_male/5_glog.csv)** - glog intensity matrix following steps 1-9
-* **[data/ctdf_f2000.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/ctdf_f2000.csv)** - example control vs treated dataframe for feature number 2000
-* **[data/ttest_ts2.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/ttest_ts2.cs)** - t-test results for test substance 2 (both dose treatments)
-* **[data/combined_male_tstats.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/combined_male_tstats.csv)** - all t-stats for all test substances and treatements for males
-* **[data/unblinded_ordered_names.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/unblinded_ordered_names.csv)** - unblinded names of the test substances
-* **[data/cefic_matching_compounds.csv](https://raw.githubusercontent.com/michabohealthscience/training-fsa/main/data/cefic_matching_compounds.csv)** - details of the test substances
+* **[data/HILIC_POS_male/0_sample_metadata.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/0_sample_metadata.csv)** - sample metadata
+* **[data/HILIC_POS_male/0_feature_metadata.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/0_feature_metadata.csv)** - feature metadata
+* **[data/HILIC_POS_male/0_sample_metadata_filtered.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/0_sample_metadata_filtered.csv)** - sample metadata (with blank removed)
+* **[data/HILIC_POS_male/1_unfiltered.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/1_unfiltered.csv)** - unfiltered intensity matrix following step 1
+* **[data/HILIC_POS_male/2_filtered.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/2_filtered.csv)** - filtered (both samples and features) intensity matrix following steps 1-6
+* **[data/HILIC_POS_male/3_pqn.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/3_pqn.csv)** - PQN normalised intensity matrix following steps 1-7
+* **[data/HILIC_POS_male/4_mv_imputed.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/4_mv_imputed.csv)** - missing value imputed intensity matrix following steps 1-8
+* **[data/HILIC_POS_male/5_glog.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/HILIC_POS_male/5_glog.csv)** - glog intensity matrix following steps 1-9
+* **[data/ctdf_f2000.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/ctdf_f2000.csv)** - example control vs treated dataframe for feature number 2000
+* **[data/ttest_ts2.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/ttest_ts2.csv)** - t-test results for test substance 2 (both dose treatments)
+* **[data/combined_male_tstats.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/combined_male_tstats.csv)** - all t-stats for all test substances and treatements for males
+* **[data/unblinded_ordered_names.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/unblinded_ordered_names.csv)** - unblinded names of the test substances
+* **[data/cefic_matching_compounds.csv](https://raw.githubusercontent.com/michabohealthscience/omics-grouping-training/main/data/cefic_matching_compounds.csv)** - details of the test substances
 
 
 # Mean comparison plot
